[package]
name = "cargo-concat"
version = "0.4.2"
license-file = "LICENSE"
readme = "README.md"
description = "Cancat"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
repository = "https://github.com/kenkoooo/cargo-concat/"

[dependencies]
cargo_metadata = "0.11.2"
anyhow = "1.0.32"
syn = { version = "1.0.41", features = ["full", "extra-traits"] }
quote = "1.0.7"
log = "0.4.11"
env_logger = "0.7.1"
clap = "3.0.0-beta.2"
proc-macro2 = "1.0.21"
